--- a/1-task9.css
+++ b/1-task9.css
@@ -178,10 +178,7 @@ html{
 #rightMassage{
     background-color: lightgray;
     margin-top: 20px;
-    padding-left: 20px;
-    padding-top:10px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding: 10px;
 }
 #rightMassage1{
     padding-left: 10px;
@@ -189,9 +186,11 @@ html{
     padding-top: 10px;
     background-color: white;
     height: 100px;
+    display: -webkit-flex;
+    justify-content: flex-start;
 }
 #rightMassage1 select,input{
-    padding:5px 30px;
+    padding:5px 20px;
     margin-bottom: 5px;
 }
 #rightMassage11{
@@ -200,7 +199,7 @@ html{
 }
 #rightMassage12{
     float: right;
-    padding-right: 30px;
+    padding-right: 40px;
 }
 #rightMassage112{
     float: left;
@@ -215,7 +214,7 @@ html{
 }
 #rightMassage15{
     float: right;
-    margin-right: 120px;
+    margin-right: 100px;
     margin-top: -50px;
 }
 #rightMassage14{
